# TwoWirePIO_RP2040

./: .gitignore  CMakeLists.txt  LICENSE  README.md  keywords.txt  library.json  library.properties  platformio.ini
examples/hardware_test/: hardware_test.ino
examples/master_echo/: master_echo.ino
examples/multiple_buses/: multiple_buses.ino
examples/scanner/: scanner.ino
pio/: i2c.pio
src/: WirePIO.cpp  WirePIO.h  WirePIOSlave.cpp  WirePIOSlave.h  WirePIOTransport.cpp  WirePIOTransport.h  WirePIO_config.h  i2c.pio.h  main.cpp
